--- a/.github/workflows/terraform-ci-cd.yml
+++ b/.github/workflows/terraform-ci-cd.yml
@@ -1,77 +1,42 @@
-name: Terraform Azure CI CD
-    - name: Azure Login
-      uses: azure/login@v1
-      with:
-        creds: ${{ secrets.AZURE_CREDENTIALS }}
-
-    # Terraform Formatting Check
-    - name: Terraform Format Check
-      run: terraform fmt -check -recursive
-
-    # Terraform Init
-    - name: Terraform Init
-      run: terraform init
-
-    # Terraform Validate
-    - name: Terraform Validate
-      run: terraform validate
-
-    # Terraform Lint (Best Practice)
-    - name: Install TFLint
-      uses: terraform-linters/setup-tflint@v4
-
-    - name: Run TFLint
-      run: tflint --init && tflint
-
-    # Terraform Security Scan
-    - name: Run tfsec
-      uses: aquasecurity/tfsec-action@v1.0.0
-
-    # Terraform Plan
-    - name: Terraform Plan
-      run: terraform plan -out=tfplan
-
-    # Terraform Apply (Only on main)
-    - name: Terraform Apply
-      if: github.ref == 'refs/heads/main'
-      run: terraform apply -auto-approve tfplan
+name: Terraform Azure Deployment
 
 on:
   push:
-    branches: [ "main" ]
-  pull_request:
+    branches:
+      - master
 
 jobs:
   terraform:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout Code
-      uses: actions/checkout@v4
+      # Checkout code
+      - name: Checkout Repo
+        uses: actions/checkout@v4
 
-    - name: Setup Terraform
-      uses: hashicorp/setup-terraform@v3
-      with:
-        terraform_version: 1.6.6
+      # Install Terraform
+      - name: Install Terraform
+        uses: hashicorp/setup-terraform@v3
+        with:
+          terraform_version: 1.6.6
 
-    - name: Azure Login
-      uses: azure/login@v1
-      with:
-        creds: ${{ secrets.AZURE_CREDENTIALS }}
+      # Azure Login using Service Principal
+      - name: Azure Login
+        uses: azure/login@v1
+        with:
+          client-id: ${{ secrets.ARM_CLIENT_ID }}
+          tenant-id: ${{ secrets.ARM_TENANT_ID }}
+          subscription-id: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+          client-secret: ${{ secrets.ARM_CLIENT_SECRET }}
 
-    # Code Validation
-    - name: Terraform Format Check
-      run: terraform fmt -check
+      # Terraform Init
+      - name: Terraform Init
+        run: terraform init
 
-    - name: Terraform Init
-      run: terraform init
+      # Terraform Plan
+      - name: Terraform Plan
+        run: terraform plan
 
-    - name: Terraform Validate
-      run: terraform validate
-
-    - name: Terraform Plan
-      run: terraform plan -out=tfplan
-
-    - name: Terraform Apply
-      if: github.ref == 'refs/heads/main'
-      run: terraform apply -auto-approve tfplan
+      # Terraform Apply (Auto approve)
+      - name: Terraform Apply
+        run: terraform apply -auto-approve
