--- a/.github/workflows/terraform-ci-cd.yml
+++ b/.github/workflows/terraform-ci-cd.yml
@@ -13,13 +13,10 @@ jobs:
     - name: Checkout Repo
       uses: actions/checkout@v3
 
-    - name: Login to Azure
+    - name: Login to Azure using SP JSON
       uses: azure/login@v1
       with:
-        client-id: ${{ secrets.ARM_CLIENT_ID }}
-        tenant-id: ${{ secrets.ARM_TENANT_ID }}
-        subscription-id: ${{ secrets.ARM_SUBSCRIPTION_ID }}
-        client-secret: ${{ secrets.ARM_CLIENT_SECRET }}
+        creds: ${{ secrets.AZURE_CREDENTIALS_JSON }}
         enable-AzPSSession: false
         environment: azurecloud
 
